[gd_scene load_steps=2 format=3 uid="uid://typing_hud"]

[ext_resource type="Script" path="res://scripts/ui/typing_hud.gd" id="1_hud"]

[node name="TypingHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 50.0
theme_override_constants/separation = 40

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_font_sizes/font_size = 24
text = "SCORE: 0"

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.690196, 0, 1)
theme_override_font_sizes/font_size = 24
text = "WAVE: 1"

[node name="ComboLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "COMBO: 0"

[node name="AccuracyLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "ACC: 100%"

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_constants/separation = 40

[node name="ActiveWordLabel" type="Label" parent="BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Type to attack!"

[node name="EnemiesLabel" type="Label" parent="BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.164706, 0.541176, 1)
theme_override_font_sizes/font_size = 20
text = "ENEMIES: 0"

[node name="ErrorsLabel" type="Label" parent="BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.164706, 0.541176, 1)
theme_override_font_sizes/font_size = 20
text = "ERRORS: 0"
